--- a/Bongo/Base.lproj/Main.storyboard
+++ b/Bongo/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="BounceViewController" customModule="Bongo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="628"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2qf-Ua-IL8">
@@ -138,21 +138,21 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QnF-cU-C8x">
-                                <rect key="frame" x="0.0" y="677" width="414" height="15"/>
+                                <rect key="frame" x="0.0" y="613" width="414" height="15"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="NFz-iV-yU9"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVo-kR-mt5">
-                                <rect key="frame" x="0.0" y="12" width="15" height="668"/>
+                                <rect key="frame" x="0.0" y="12" width="15" height="604"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="jZz-HT-PBT"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nZB-uL-nSZ">
-                                <rect key="frame" x="399" y="12" width="15" height="668"/>
+                                <rect key="frame" x="399" y="12" width="15" height="604"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="XID-JW-cRJ"/>
@@ -176,7 +176,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <tabBarItem key="tabBarItem" title="Bounce" id="5ZC-KU-6Rl"/>
                     <connections>
                         <outlet property="bottomBumperView" destination="QnF-cU-C8x" id="g8b-iX-cxl"/>
